[package]
name = "dns-cookie"
description = "Algorithms for Domain Name System (DNS) Cookies construction"
version = "0.1.0"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["dns", "no_std"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
no-std-net = { version = "0.5.0", default-features = false }
siphasher = { version = "0.3.7", default-features = false }
time = { version = "0.3.4", default-features = false }
